kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lego-data-service
spec:
  type: ClusterIP
  selector:
    app: lego-data-service-deployment
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
